[gd_scene load_steps=10 format=3 uid="uid://cecm51itc2gro"]

[ext_resource type="StyleBox" uid="uid://cwv3spoo3ofqw" path="res://样式/白勾线尖锐面板.tres" id="1_jibuy"]
[ext_resource type="Texture2D" uid="uid://b7pu5wbilmncp" path="res://tex/Icon/icon.svg" id="2_ljw1k"]
[ext_resource type="Script" uid="uid://b2rpgg5kv1aku" path="res://节点/scipt_show.gd" id="2_w8mv2"]
[ext_resource type="Theme" uid="uid://o6uty0krg20r" path="res://样式/白圆角_选择按钮.tres" id="3_lovl1"]
[ext_resource type="Theme" uid="uid://cx4sysmtsqffs" path="res://样式/白色平面化按钮.tres" id="4_f00bn"]
[ext_resource type="LabelSettings" uid="uid://b8taxan0e7ll" path="res://样式/25黑色字体.tres" id="4_lovl1"]
[ext_resource type="LabelSettings" uid="uid://ss7xrl04au3m" path="res://样式/描边小白色字体.tres" id="6_jibuy"]
[ext_resource type="PackedScene" uid="uid://8oey5xxpk7x2" path="res://按钮/transform_select.tscn" id="7_hwdhl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lovl1"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(0, 0, 0, 0.9019608)
corner_radius_top_right = 100
corner_radius_bottom_left = 100
corner_detail = 10
shadow_color = Color(0, 0, 0, 0.117647)
shadow_size = 3

[node name="show_ent" type="Panel"]
custom_minimum_size = Vector2(920, 140)
anchors_preset = -1
anchor_left = 0.523
anchor_top = 0.459
anchor_right = 0.523
anchor_bottom = 0.459
offset_left = -459.8
offset_top = -2.100006
offset_right = 460.2
offset_bottom = 137.9
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(425, 37.5)
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_lovl1")
script = ExtResource("2_w8mv2")
script_node_type = "Shown"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 212.0
offset_bottom = 81.0
theme_override_styles/panel = ExtResource("1_jibuy")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = 6.0
offset_right = 847.0
offset_bottom = 32.0
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="Show_Select" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 51.0
offset_right = 150.0
offset_bottom = 96.0
theme = ExtResource("3_lovl1")
theme_override_colors/font_color = Color(0.0470588, 0.0392157, 0.0509804, 0.784314)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 29
alignment = 1
autowrap_mode = 1
selected = 0
allow_reselect = true
item_count = 2
popup/item_0/text = "显示"
popup/item_0/id = 0
popup/item_1/text = "隐藏"
popup/item_1/id = 1

[node name="Character_Select" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 341.0
offset_top = 19.0
offset_right = 542.0
offset_bottom = 54.0
theme = ExtResource("3_lovl1")
alignment = 1
clip_text = true
fit_to_longest_item = false
allow_reselect = true

[node name="Label" type="Label" parent="Character_Select"]
layout_mode = 0
offset_left = -70.0
offset_top = 3.0
offset_right = -20.0
offset_bottom = 31.0
mouse_filter = 1
text = "角色"
label_settings = ExtResource("4_lovl1")

[node name="Emo_Select" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 341.0
offset_top = 82.5
offset_right = 542.0
offset_bottom = 117.5
theme = ExtResource("3_lovl1")
alignment = 1
clip_text = true
icon_alignment = 1

[node name="With" type="Label" parent="Emo_Select"]
layout_mode = 0
offset_left = -70.0
offset_top = 3.0
offset_right = -20.0
offset_bottom = 29.0
mouse_filter = 1
text = "差分"
label_settings = ExtResource("4_lovl1")

[node name="tex" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.144
anchor_top = 0.017
anchor_right = 0.144
anchor_bottom = 0.017
offset_left = 40.6
offset_top = 25.62
offset_right = 200.6
offset_bottom = 185.62
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 1
theme = ExtResource("4_f00bn")
icon = ExtResource("2_ljw1k")
icon_alignment = 1
expand_icon = true

[node name="Position_Select" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 663.0
offset_top = 19.0
offset_right = 815.0
offset_bottom = 54.0
theme = ExtResource("3_lovl1")
allow_reselect = true

[node name="Label2" type="Label" parent="Position_Select"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = -28.5
offset_right = 100.0
offset_bottom = -0.5
mouse_filter = 1
text = "角色"
label_settings = ExtResource("6_jibuy")

[node name="At" type="Label" parent="Position_Select"]
layout_mode = 0
offset_left = -70.0
offset_top = 3.0
offset_right = -20.0
offset_bottom = 29.0
mouse_filter = 1
text = "位置"
label_settings = ExtResource("4_lovl1")

[node name="Transform_Select" parent="." instance=ExtResource("7_hwdhl")]
layout_mode = 1
anchors_preset = -1
offset_left = 662.5
offset_top = 83.0
offset_right = 815.5
offset_bottom = 118.0
theme = ExtResource("3_lovl1")

[node name="Label3" type="Label" parent="Transform_Select"]
visible = false
layout_mode = 0
offset_left = 49.5
offset_top = -28.5
offset_right = 99.5
offset_bottom = -0.5
mouse_filter = 1
text = "角色"
label_settings = ExtResource("6_jibuy")

[node name="With" type="Label" parent="Transform_Select"]
layout_mode = 0
offset_left = -70.0
offset_top = 3.0
offset_right = -20.0
offset_bottom = 29.0
mouse_filter = 1
text = "变换"
label_settings = ExtResource("4_lovl1")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="item_selected" from="Character_Select" to="." method="_on_character_select_item_selected"]
[connection signal="item_selected" from="Emo_Select" to="." method="_on_emo_select_item_selected"]
[connection signal="item_selected" from="Position_Select" to="." method="_on_position_select_item_selected"]
